[package]
name = "solana-snapshot-etl"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/solana-snapshot-etl"
description = "Efficiently unpack Solana snapshots"
authors = ["Richard Patel <me@terorie.dev>", "Triton One"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]
publish = false

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
crossbeam = "0.8.2"
env_logger = "0.9.0"
indicatif = "0.17.6"
itertools = "0.10.3"
log = "0.4.17"
memmap2 = "0.5.5"
num_cpus = "1.16.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
solana-frozen-abi-macro = "1.16.12"
solana-runtime = "1.16.12"
solana-sdk = "1.16.12"
tar = "0.4.38"
thiserror = "1.0.31"
zstd = "0.11.2"
