[package]
name = "solana-snapshot-etl"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/solana-snapshot-etl"
description = "Efficiently unpack Solana snapshots"
authors = ["Richard Patel <me@terorie.dev>", "Triton One"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]
publish = false

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
const-hex = "1.6.2"
env_logger = "0.9.0"
futures = "0.3.28"
indicatif = "0.17.6"
itertools = "0.10.3"
log = "0.4.17"
memmap2 = "0.5.5"
num_cpus = "1.16.0"
rdkafka = { version = "0.33.2", features = ["ssl", "sasl"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.7"
solana-frozen-abi-macro = "1.16.1"
solana-runtime = "1.16.1"
solana-sdk = "1.16.1"
tar = "0.4.38"
thiserror = "1.0.31"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"]}
yellowstone-grpc-geyser = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "kafka-v1.0.0-rc.0+solana.1.16.1" }
yellowstone-grpc-kafka = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "kafka-v1.0.0-rc.0+solana.1.16.1" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "kafka-v1.0.0-rc.0+solana.1.16.1" }
zstd = "0.11.2"
