[package]
name = "solana-snapshot-etl"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/solana-snapshot-etl"
description = "Efficiently unpack Solana snapshots"
authors = ["Richard Patel <me@terorie.dev>", "Triton One"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]
publish = false

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
const-hex = "1.6.2"
env_logger = "0.9.0"
futures = "0.3.28"
indicatif = "0.17.6"
itertools = "0.10.3"
log = "0.4.17"
memmap2 = "0.5.5"
num_cpus = "1.16.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.7"
solana-frozen-abi-macro = "=2.0.13"
solana-accounts-db = "=2.0.13"
solana-runtime = "=2.0.13"
solana-sdk = "=2.0.13"
tar = "0.4.38"
thiserror = "1.0.57"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
zstd = "0.11.2"

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
debug = true
lto = true
codegen-units = 1
